fixed scrollbar

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -18,6 +18,7 @@ body {
     margin:0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 h1 {
     font-size: 70px;
